# screenbot

./: .gitignore  LICENSE  README.md  configs.py  justfile  pyproject.toml  screenbot.py
json/: exclusion_list.json  rss_feeds.json  screened_studies.json
main/: airtable_export.py  configs.py  rss_funcs.py  screenbot.py  screenbot_funcs.py
main/json/: exclusion_list.json
